# monolith

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  monolith.d.ts  monolith.js  monolith_bg.d.ts  monolith_bg.wasm  package.json
scripts/: make-release.bash
snippets/monolith-296bbe604794110b/src/: fetch.js
src/: fetch.js  html.rs  http.rs  lib.rs  main.rs  utils.rs  wasm.rs  wasm_dummy_client.rs
