[package]
name = "monolith"
version = "2.0.23"
authors = [
    "Sunshine <sunshine@uberspace.net>",
    "Mahdi Robatipoor <mahdi.robatipoor@gmail.com>",
    "Emmanuel Delaborde <th3rac25@gmail.com>",
    "rhysd <https://rhysd.github.io>",
]
description = "CLI tool for saving web pages as a single HTML file"

[dependencies]
base64 = "0.10.1"
html5ever = "0.24.1"
lazy_static = "1.4.0"
regex = "1.3.1"
url = "2.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = "0.9.20"
clap = "2.33.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "~0.2.55"
wasm-bindgen-futures = "~0.4.5"
js-sys = "~0.3.32"
web-sys = { version = "~0.3.32", features = [ "Window", "Response" ] }

[lib]
crate-type = ["cdylib", "rlib"]
