[package]
name = "monolith"
version = "2.1.1"
edition = "2018"
authors = [
    "Sunshine <sunshine@uberspace.net>",
    "Mahdi Robatipoor <mahdi.robatipoor@gmail.com>",
    "Emmanuel Delaborde <th3rac25@gmail.com>",
    "Emi Simpson <emi@alchemi.dev>",
    "rhysd <lin90162@yahoo.co.jp>",
]
description = "CLI tool for saving web pages as a single HTML file"

[dependencies]
base64 = "0.10.1"
html5ever = "0.24.1"
lazy_static = "1.4.0"
url = "2.1.0"
regex = "1.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "2.33.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.reqwest]
version = "0.10.*"
default-features = false
features = ["default-tls", "blocking", "gzip"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "~0.2.55"
wasm-bindgen-futures = "~0.4.5"
js-sys = "~0.3.32"
web-sys = { version = "~0.3.32", features = [ "console" ] }

[lib]
crate-type = ["cdylib", "rlib"]
